# chatterbox.cpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  PROGRESS.md  PROGRESS_SUPERTONIC.md  README.md  SUMMARY-3.24-3.31.md
.github/workflows/: supertonic-portable-build.yml
cmake/: qvac-tts-cppConfig.cmake  qvac-tts-cppConfigVersion.cmake  tts-cppConfig.cmake.in
ggml/src/ggml-metal/: ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.metal
include/qvac-tts/: qvac-tts.h
include/qvac-tts/chatterbox/: engine.h  s3gen_pipeline.h
include/tts-cpp/: backend.h  export.h  log.h  tts-cpp.h
include/tts-cpp/chatterbox/: engine.h  s3gen_pipeline.h
include/tts-cpp/supertonic/: engine.h
patches/: README.md  ggml-backend-reg-filename-prefix.patch  ggml-metal-chatterbox-ops.patch  ggml-opencl-allow-non-adreno.patch  ggml-opencl-chatterbox-ops.patch  ggml-opencl-program-binary-cache.patch  ggml-vulkan-eager-cache-save.patch  ggml-vulkan-pipeline-cache.patch
scripts/: bench-m4-validation.sh  bench-supertonic-onnx.py  compare-tokenizer.py  convert-s3gen-to-gguf.py  convert-supertonic2-to-gguf.py  convert-t3-turbo-to-gguf.py  dump-campplus-reference.py  dump-s3gen-reference.py  dump-streaming-reference.py  dump-supertonic-reference.py  dump-t3-mtl-reference.py  extract-voice.py  gen-nfkd-table.py  reference-t3-turbo.py  requantize-gguf.py  setup-ggml.sh  setup-supertonic2.sh  synthesize.sh
src/: campplus.cpp  campplus.h  campplus_forward.inc  chatterbox_cli.cpp  chatterbox_engine.cpp  chatterbox_t3_internal.h  chatterbox_tts.cpp  chatterbox_tts_test_hooks.h  cli_main.cpp  gpt2_bpe.cpp  gpt2_bpe.h  log.cpp  main.cpp  mtl_tokenizer.cpp  mtl_tokenizer.h  mtl_unicode_tables.inc  npy.h  s3gen_pipeline.h  s3tokenizer.cpp  s3tokenizer.h  supertonic_bench.cpp  supertonic_cli.cpp  supertonic_duration.cpp  supertonic_engine.cpp  supertonic_gguf.cpp  supertonic_internal.h  supertonic_preprocess.cpp  supertonic_text_encoder.cpp  supertonic_vector_estimator.cpp  supertonic_vocoder.cpp  t3_mtl.cpp  t3_mtl.h  test_cpu_caches.cpp  test_s3gen.cpp  test_streaming.cpp  test_supertonic_duration.cpp  test_supertonic_pipeline.cpp  test_supertonic_text_encoder.cpp  test_supertonic_vector.cpp  test_supertonic_vector_trace.cpp  (+8 more)
test/: test_campplus.cpp  test_cpu_caches.cpp  test_fbank.cpp  test_metal_ops.cpp  test_mtl_tokenizer.cpp  test_resample.cpp  test_s3gen.cpp  test_s3tokenizer.cpp  test_streaming.cpp  test_supertonic_duration_trace.cpp  test_supertonic_preprocess.cpp  test_supertonic_text_encoder_trace.cpp  test_supertonic_vocoder_pointwise.cpp  test_supertonic_vocoder_trace.cpp  test_t3_caches.cpp  test_voice_embedding.cpp  test_voice_encoder.cpp  test_voice_features.cpp
